<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
                name="view"
                type="com.fachrudin.project.app.presentation.view.ProfileView"/>

        <variable
                name="vm"
                type="com.fachrudin.project.app.presentation.viewmodel.ProfileViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/txt_label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/profile_label_email"/>

        <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{vm.bTextEmail}"
                app:layout_constraintTop_toBottomOf="@+id/txt_label_email"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/profile_label_email"/>

        <TextView
                android:id="@+id/txt_label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/txt_email"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/profile_label_password"/>

        <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{vm.bTextPassword}"
                app:layout_constraintTop_toBottomOf="@+id/txt_label_password"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/profile_label_password"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{v ->view.onClickLogout(v)}"
                android:text="@string/profil_btn_logout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>